[gd_scene load_steps=13 format=3 uid="uid://ce727echlgxi3"]

[ext_resource type="Texture2D" uid="uid://ywbckvgcduds" path="res://Assets/Square.png" id="1_bsnjd"]
[ext_resource type="Script" uid="uid://b83w5d3xgjxb" path="res://enemy_square/enemy_square.gd" id="1_dgwn8"]
[ext_resource type="AudioStream" uid="uid://cgkempstdjtdf" path="res://Assets/sounds/select_005.ogg" id="3_hotne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsnjd"]
size = Vector2(61, 57)

[sub_resource type="Animation" id="Animation_hotne"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RotationNode/Square:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dgwn8"]
resource_name = "fade-in"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RotationNode/Square:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jgkfr"]
_data = {
&"RESET": SubResource("Animation_hotne"),
&"fade-in": SubResource("Animation_dgwn8")
}

[sub_resource type="Gradient" id="Gradient_dgwn8"]
offsets = PackedFloat32Array(0, 0.787402, 1)
colors = PackedColorArray(1, 0.392157, 0, 1, 0.921758, 0.26605, 0.194661, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h4cex"]
gradient = SubResource("Gradient_dgwn8")

[sub_resource type="Curve" id="Curve_hotne"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_h4cex"]
curve = SubResource("Curve_hotne")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jgkfr"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(2, 2, 2)
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
initial_velocity_max = 150.0
scale_min = 5.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_h4cex")
color_ramp = SubResource("GradientTexture1D_h4cex")

[node name="enemy_square" type="CharacterBody2D" groups=["ENEMY", "SQUARE_ENEMY"]]
collision_layer = 2
script = ExtResource("1_dgwn8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_bsnjd")

[node name="RotationNode" type="Node2D" parent="."]

[node name="Square" type="Sprite2D" parent="RotationNode"]
position = Vector2(0.999992, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_bsnjd")

[node name="bullet_spawner1" type="Marker2D" parent="RotationNode"]
position = Vector2(-25, -24)
rotation = -2.35619

[node name="bullet_spawner2" type="Marker2D" parent="RotationNode"]
position = Vector2(30, -24)
rotation = -0.785398

[node name="bullet_spawner3" type="Marker2D" parent="RotationNode"]
position = Vector2(30, 28)
rotation = 0.785398

[node name="bullet_spawner4" type="Marker2D" parent="RotationNode"]
position = Vector2(-26, 28)
rotation = 2.35619

[node name="spawn" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jgkfr")
}
autoplay = "fade-in"

[node name="explosion" type="GPUParticles2D" parent="."]
position = Vector2(3, 1)
emitting = false
amount = 100
lifetime = 0.9
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_jgkfr")

[node name="die_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hotne")
volume_db = -10.0

[connection signal="animation_finished" from="spawn" to="." method="_on_spawn_animation_finished"]
